--- a/style.css
+++ b/style.css
@@ -1,7 +1,46 @@
+
 body{
     margin: 0;
     padding: 0;
+    font-family: 'Roboto';
+}
+.Hero{
+    background-color: #1F2937;
+    color: white;
+    background-size: cover;
+}
+h3{
+    margin-top: 0;
+}
+h1{
+    font-weight: 900;
 }
 .Header{
-    background-color: #1F2937;
+ display: flex;
+justify-content: space-around;
+padding: 10px;
+}
+.hbuttons{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+.heroc{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.palceholder{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.herotext{
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+}
+.signup{
+    width: 100px;
 }
