--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     background-color: #1F2937;
     color: white;
     background-size: cover;
+    padding-bottom: 50px;
 }
 h3{
     margin-top: 0;
@@ -17,19 +18,32 @@ h1{
 }
 .Header{
  display: flex;
-justify-content: space-around;
-padding: 10px;
+justify-content: space-between;
+padding-top:  10px;
+padding-left: 20px;
+padding-right: 20px;
+flex: 1;
+margin: 0 auto;
+max-width: 1000px;
 }
 .hbuttons{
     display: flex;
     justify-content: space-between;
     gap: 10px;
+    
 }
 .heroc{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 20px;
+    flex: 1;
+    margin: 0 auto;
+    padding-top: 70px;
+    padding-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+    gap: 10px;
+    max-width: 1000px;
 }
 .palceholder{
     display: flex;
@@ -37,10 +51,15 @@ padding: 10px;
     align-items: center;
 }
 .herotext{
-    width: 350px;
+    width: 450px;
     display: flex;
     flex-direction: column;
+    
 }
 .signup{
     width: 100px;
+    margin-top: 10px;
+}
+p{
+    margin: 0;
 }
