--- a/style.css
+++ b/style.css
@@ -63,3 +63,31 @@ max-width: 1000px;
 p{
     margin: 0;
 }
+.sec2{
+    padding-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.box{
+    height: 150px;
+    width: 150px;
+    border:4px solid #3882F6;
+    border-radius: 10px;
+    flex-shrink: 0;
+    margin-bottom: 10px;
+}
+.boxcont{
+    display: flex;
+    gap: 50px;
+
+}
+.contcont{
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    align-items: center;
+    text-align: center;
+    color: gray;
+}
